ext {
    junitVersion = project.hasProperty('junitVersion') ? rootProject.ext.junitVersion : '4.13.2'
    androidxAppCompatVersion = project.hasProperty('androidxAppCompatVersion') ? rootProject.ext.androidxAppCompatVersion : '1.8.0'
    // 1.18.0 is the newest stable Core release whose published AAR metadata
    // supports this module's compileSdk 36 / AGP 8.13 baseline. Core 1.19.0
    // raises its consumer minimums to compileSdk 37 and AGP 9.1.
    androidxCoreVersion = project.hasProperty('androidxCoreVersion') ? rootProject.ext.androidxCoreVersion : '1.18.0'
    androidxJunitVersion = project.hasProperty('androidxJunitVersion') ? rootProject.ext.androidxJunitVersion : '1.3.0'
    androidxEspressoCoreVersion = project.hasProperty('androidxEspressoCoreVersion') ? rootProject.ext.androidxEspressoCoreVersion : '3.7.0'
    // Only used when this module is built on its own (`cd android && ./gradlew build`).
    // Inside an app the app's own buildscript classpath wins, which is what this
    // library relies on when embedded in a Capacitor app.
    standaloneAgpVersion = project.hasProperty('androidGradlePluginVersion') ? rootProject.ext.androidGradlePluginVersion : '8.13.2'
}

buildscript {
    repositories {
        google()
        mavenCentral()
    }
    dependencies {
        classpath "com.android.tools.build:gradle:${project.hasProperty('androidGradlePluginVersion') ? rootProject.ext.androidGradlePluginVersion : '8.13.2'}"
    }
}

apply plugin: 'com.android.library'

android {
    namespace = "app.nativenavigationbar.capacitor"
    // Follows the host app's compileSdk, with an API 36 standalone fallback.
    compileSdk = project.hasProperty('compileSdkVersion') ? rootProject.ext.compileSdkVersion : 36
    defaultConfig {
        // Keep the library's minimum independent so host apps cannot lower it.
        minSdkVersion 30
        targetSdkVersion project.hasProperty('targetSdkVersion') ? rootProject.ext.targetSdkVersion : 36
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles 'proguard-rules.pro'
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    lint {
        abortOnError = true
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
    testOptions {
        unitTests {
            includeAndroidResources = true
            returnDefaultValues = true
        }
    }
}

repositories {
    google()
    mavenCentral()
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation project(':capacitor-android')
    annotationProcessor project(':capacitor-android')
    implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
    // androidx.core.graphics.PathParser (used by the SVG icon renderer) is public
    // API from core 1.7.0 onward; declare it explicitly instead of relying on the
    // version appcompat happens to pull in.
    implementation "androidx.core:core:$androidxCoreVersion"
    testImplementation "junit:junit:$junitVersion"
    androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
    androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
}
